tests/ui/frontmatter/frontmatter-invalid-non-ident-infostring.stderr
error: expected item, found `-`
  --> $DIR/frontmatter-invalid-non-ident-infostring.rs:1:1
   |
LL | ---cargo,hello-world
   | ^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

