tests/ui/frontmatter/frontmatter-invalid-non-ident-infostring.rs
---cargo,hello-world
//~^ ERROR expected item, found `-`
---

#![feature(frontmatter)]

fn main() {
}
